[package]
name = "backend"
version = "2.1.1"
edition = "2024"
authors = ["UberMetroid <admin@ubermetroid.com>"]
license = "Apache-2.0"
repository = "https://github.com/UberMetroid/Trace"
homepage = "https://github.com/UberMetroid/Trace"
description = "Axum backend service for Trace."
readme = "../README.md"

[dependencies]
shared-assets = { path = "../frontend/Assets/shared-assets/shared-rust" }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "net", "time", "io-util"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
regex = "1.10"
sha2 = "0.11"
ipnet = "2.9"

[package.metadata.deb]
name = "trace"
changelog = "debian/changelog"
copyright = "2026 UberMetroid <admin@ubermetroid.com>"
maintainer = "UberMetroid <admin@ubermetroid.com>"
extended-description = """\
Trace is a high-performance, self-hosted WHOIS, IP, and ASN lookup utility \
built in Rust. It performs deep WHOIS queries over raw TCP sockets with \
PeeringDB ASN detail fallbacks."""
depends = "$auto, libc6, ca-certificates"
section = "utils"
priority = "optional"
maintainer-scripts = "debian"
assets = [
    ["target/release/backend", "usr/bin/trace", "755"],
    ["../README.md", "usr/share/doc/trace/README.md", "644"],
]
systemd-units = {}

[package.metadata.generate-rpm]
name = "trace"

